kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studyflow-app
spec:
  selector:
    matchLabels:
      app: studyflow-app
  template:
    metadata:
      labels:
        app: studyflow-app
    spec:
      containers:
      - name: studyflow-app
        image: frosinacvetkovska/studyflow:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
