kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-devops-interns
  namespace: studyflow
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "studyflow.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studyflow-backend
                port:
                  number: 8080
